Oops. Overflow hidden fix

--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ body {
 
 body {
     font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
-    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 .header {
